Implemented scene 5 with basic phong lighting model. Implemented getPosition function in camera. Ensured all opengl buffers/arrays created are cleared in Scene 4 desctuctor.

--- a/Louron2020/Louron2020.vcxproj.filters
+++ b/Louron2020/Louron2020.vcxproj.filters
@@ -125,11 +125,15 @@
     <ClInclude Include="Scenes\Scene 4.h">
       <Filter>Header Files</Filter>
     </ClInclude>
+    <ClInclude Include="Scenes\Scene 5.h">
+      <Filter>Header Files</Filter>
+    </ClInclude>
   </ItemGroup>
   <ItemGroup>
     <None Include="Resources\Shaders\basic.glsl" />
     <None Include="Resources\Shaders\basic_texture.glsl" />
     <None Include="Resources\Shaders\basic_cube.glsl" />
+    <None Include="Resources\Shaders\basic_phong.glsl" />
   </ItemGroup>
   <ItemGroup>
     <Image Include="Resources\Images\cube_texture.jpg">
