--- a/Louron2020/Louron2020.vcxproj
+++ b/Louron2020/Louron2020.vcxproj
@@ -128,6 +128,7 @@
     <ClInclude Include="Headers\imgui\imstb_textedit.h" />
     <ClInclude Include="Headers\imgui\imstb_truetype.h" />
     <ClInclude Include="Scenes\Scene 4.h" />
+    <ClInclude Include="Scenes\Scene 5.h" />
   </ItemGroup>
   <ItemGroup>
     <Image Include="Resources\Images\cube_texture.jpg" />
@@ -136,6 +137,7 @@
   <ItemGroup>
     <None Include="Resources\Shaders\basic.glsl" />
     <None Include="Resources\Shaders\basic_cube.glsl" />
+    <None Include="Resources\Shaders\basic_phong.glsl" />
     <None Include="Resources\Shaders\basic_texture.glsl" />
   </ItemGroup>
   <Import Project="$(VCTargetsPath)\Microsoft.Cpp.targets" />
