--- a/Louron2020/Louron2020.vcxproj
+++ b/Louron2020/Louron2020.vcxproj
@@ -99,10 +99,13 @@
     <ClCompile Include="Headers\imgui\imgui_impl_glfw.cpp" />
     <ClCompile Include="Headers\imgui\imgui_impl_opengl3.cpp" />
     <ClCompile Include="Headers\imgui\imgui_widgets.cpp" />
+    <ClCompile Include="Source\Camera.cpp" />
     <ClCompile Include="Source\Engine.cpp" />
     <ClCompile Include="Source\Entity.cpp" />
     <ClCompile Include="Source\Input.cpp" />
     <ClCompile Include="Source\Main.cpp" />
+    <ClCompile Include="Source\Shader.cpp" />
+    <ClCompile Include="Source\Texture.cpp" />
     <ClCompile Include="Source\Window.cpp" />
   </ItemGroup>
   <ItemGroup>
