--- a/Louron2020/Louron2020.vcxproj
+++ b/Louron2020/Louron2020.vcxproj
@@ -68,7 +68,7 @@
     <Link>
       <SubSystem>Console</SubSystem>
       <GenerateDebugInformation>true</GenerateDebugInformation>
-      <AdditionalDependencies>glew32s.lib;glfw3.lib;opengl32.lib;kernel32.lib;user32.lib;gdi32.lib;winspool.lib;comdlg32.lib;advapi32.lib;shell32.lib;ole32.lib;oleaut32.lib;uuid.lib;odbc32.lib;odbccp32.lib;%(AdditionalDependencies)</AdditionalDependencies>
+      <AdditionalDependencies>assimp.lib;glew32s.lib;glfw3.lib;opengl32.lib;kernel32.lib;user32.lib;gdi32.lib;winspool.lib;comdlg32.lib;advapi32.lib;shell32.lib;ole32.lib;oleaut32.lib;uuid.lib;odbc32.lib;odbccp32.lib;%(AdditionalDependencies)</AdditionalDependencies>
       <IgnoreSpecificDefaultLibraries>MSVCRT.lib;LIBCMT.lib;</IgnoreSpecificDefaultLibraries>
       <AdditionalOptions>/ignore:4099 %(AdditionalOptions)</AdditionalOptions>
     </Link>
@@ -87,18 +87,19 @@
       <EnableCOMDATFolding>true</EnableCOMDATFolding>
       <OptimizeReferences>true</OptimizeReferences>
       <GenerateDebugInformation>false</GenerateDebugInformation>
-      <AdditionalDependencies>glew32s.lib;glfw3.lib;opengl32.lib;kernel32.lib;user32.lib;gdi32.lib;winspool.lib;comdlg32.lib;advapi32.lib;shell32.lib;ole32.lib;oleaut32.lib;uuid.lib;odbc32.lib;odbccp32.lib;%(AdditionalDependencies)</AdditionalDependencies>
+      <AdditionalDependencies>assimp.lib;glew32s.lib;glfw3.lib;opengl32.lib;kernel32.lib;user32.lib;gdi32.lib;winspool.lib;comdlg32.lib;advapi32.lib;shell32.lib;ole32.lib;oleaut32.lib;uuid.lib;odbc32.lib;odbccp32.lib;%(AdditionalDependencies)</AdditionalDependencies>
       <IgnoreSpecificDefaultLibraries>LIBCMT.lib</IgnoreSpecificDefaultLibraries>
-      <AdditionalOptions>/ignore:4099 %(AdditionalOptions)</AdditionalOptions>
     </Link>
   </ItemDefinitionGroup>
   <ItemGroup>
-    <ClCompile Include="Headers\imgui\imgui.cpp" />
-    <ClCompile Include="Headers\imgui\imgui_demo.cpp" />
-    <ClCompile Include="Headers\imgui\imgui_draw.cpp" />
-    <ClCompile Include="Headers\imgui\imgui_impl_glfw.cpp" />
-    <ClCompile Include="Headers\imgui\imgui_impl_opengl3.cpp" />
-    <ClCompile Include="Headers\imgui\imgui_widgets.cpp" />
+    <ClCompile Include="Source\MeshRenderer.cpp" />
+    <ClCompile Include="Headers\Abstracted GL\MeshRenderer.h" />
+    <ClCompile Include="Vendor\imgui\imgui.cpp" />
+    <ClCompile Include="Vendor\imgui\imgui_demo.cpp" />
+    <ClCompile Include="Vendor\imgui\imgui_draw.cpp" />
+    <ClCompile Include="Vendor\imgui\imgui_impl_glfw.cpp" />
+    <ClCompile Include="Vendor\imgui\imgui_impl_opengl3.cpp" />
+    <ClCompile Include="Vendor\imgui\imgui_widgets.cpp" />
     <ClCompile Include="Source\Camera.cpp" />
     <ClCompile Include="Source\Engine.cpp" />
     <ClCompile Include="Source\Entity.cpp" />
@@ -109,9 +110,10 @@
     <ClCompile Include="Source\Window.cpp" />
   </ItemGroup>
   <ItemGroup>
+    <ClInclude Include="Headers\Abstracted GL\Material.h" />
     <ClInclude Include="Headers\Camera.h" />
     <ClInclude Include="Headers\Entity.h" />
-    <ClInclude Include="Headers\Texture.h" />
+    <ClInclude Include="Headers\Abstracted GL\Texture.h" />
     <ClInclude Include="Scenes\Scene 2.h" />
     <ClInclude Include="Scenes\Scene 1.h" />
     <ClInclude Include="Scenes\Scene 3.h" />
@@ -119,17 +121,17 @@
     <ClInclude Include="Headers\SceneState.h" />
     <ClInclude Include="Headers\Input.h" />
     <ClInclude Include="Scenes\MainMenu.h" />
-    <ClInclude Include="Headers\Shader.h" />
-    <ClInclude Include="Headers\stb_image.h" />
+    <ClInclude Include="Headers\Abstracted GL\Shader.h" />
+    <ClInclude Include="Vendor\stb_image.h" />
     <ClInclude Include="Headers\Window.h" />
-    <ClInclude Include="Headers\imgui\imconfig.h" />
-    <ClInclude Include="Headers\imgui\imgui.h" />
-    <ClInclude Include="Headers\imgui\imgui_impl_glfw.h" />
-    <ClInclude Include="Headers\imgui\imgui_impl_opengl3.h" />
-    <ClInclude Include="Headers\imgui\imgui_internal.h" />
-    <ClInclude Include="Headers\imgui\imstb_rectpack.h" />
-    <ClInclude Include="Headers\imgui\imstb_textedit.h" />
-    <ClInclude Include="Headers\imgui\imstb_truetype.h" />
+    <ClInclude Include="Vendor\imgui\imconfig.h" />
+    <ClInclude Include="Vendor\imgui\imgui.h" />
+    <ClInclude Include="Vendor\imgui\imgui_impl_glfw.h" />
+    <ClInclude Include="Vendor\imgui\imgui_impl_opengl3.h" />
+    <ClInclude Include="Vendor\imgui\imgui_internal.h" />
+    <ClInclude Include="Vendor\imgui\imstb_rectpack.h" />
+    <ClInclude Include="Vendor\imgui\imstb_textedit.h" />
+    <ClInclude Include="Vendor\imgui\imstb_truetype.h" />
     <ClInclude Include="Scenes\Scene 4.h" />
     <ClInclude Include="Scenes\Scene 5.h" />
   </ItemGroup>
@@ -140,6 +142,7 @@
   <ItemGroup>
     <None Include="Resources\Shaders\basic.glsl" />
     <None Include="Resources\Shaders\basic_cube.glsl" />
+    <None Include="Resources\Shaders\basic_material_phong.glsl" />
     <None Include="Resources\Shaders\basic_phong.glsl" />
     <None Include="Resources\Shaders\basic_texture.glsl" />
   </ItemGroup>
