--- a/Louron2020/Louron2020.vcxproj
+++ b/Louron2020/Louron2020.vcxproj
@@ -139,6 +139,7 @@
   <ItemGroup>
     <Image Include="Resources\Images\cube_texture.jpg" />
     <Image Include="Resources\Images\grass_texture.jpg" />
+    <Image Include="Resources\Images\L20 Icon.png" />
   </ItemGroup>
   <ItemGroup>
     <None Include="assimp.dll" />
