--- a/Louron2020/Louron2020.vcxproj.filters
+++ b/Louron2020/Louron2020.vcxproj.filters
@@ -104,9 +104,6 @@
     <ClInclude Include="Headers\Abstracted GL\Material.h">
       <Filter>Header Files</Filter>
     </ClInclude>
-    <ClInclude Include="Headers\SceneManager.h">
-      <Filter>Header Files</Filter>
-    </ClInclude>
     <ClInclude Include="Vendor\imgui\imconfig.h">
       <Filter>Vendor\ImGUI</Filter>
     </ClInclude>
@@ -153,6 +150,12 @@
       <Filter>Scenes</Filter>
     </ClInclude>
     <ClInclude Include="Headers\Abstracted GL\Light.h">
+      <Filter>Header Files</Filter>
+    </ClInclude>
+    <ClInclude Include="Scenes\Test\Optimal Scene Setup.h">
+      <Filter>Header Files</Filter>
+    </ClInclude>
+    <ClInclude Include="Headers\InstanceManager.h">
       <Filter>Header Files</Filter>
     </ClInclude>
   </ItemGroup>
